# worldcup-fifa-2026-predictions

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml  tournament_2026.yaml
dashboard/: app.py
dashboard/components/: bracket.py  probabilities.py
docs/: metodologia.md
scripts/: download_data.py  evaluate.py  simulate.py  train.py
src/worldcup/: __init__.py  cli.py  config.py
src/worldcup/data/: __init__.py  clean.py  download.py  features.py  ingest.py
src/worldcup/evaluation/: __init__.py  backtest.py  metrics.py
src/worldcup/models/: __init__.py  base.py  dixon_coles.py  ml_xgb.py  poisson.py
src/worldcup/ratings/: __init__.py  elo.py  fifa_ranking.py
src/worldcup/simulation/: __init__.py  match.py  montecarlo.py  tournament.py
tests/: test_config.py  test_dixon_coles.py  test_elo.py  test_metrics.py
