[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup"
version = "0.1.0"
description = "Modelo de predicción del Mundial FIFA 2026 (Elo + Dixon-Coles + Monte Carlo)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ds.bautista" }]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "joblib>=1.4",
    "matplotlib>=3.9",
    "plotly>=5.22",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.36"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "ipykernel>=6.29"]

[project.scripts]
worldcup = "worldcup.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src"]
